--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -224,7 +224,8 @@ ruby:
     versions: {  }
 nodejs:
     install: '1'
-    npm_packages: {  }
+    npm_packages:
+        - grunt
 python:
     install: '1'
     packages: {  }
