--- a/awesome/oc-content/themes/psfc/package.json
+++ b/awesome/oc-content/themes/psfc/package.json
@@ -7,6 +7,7 @@
     "gulp-autoprefixer": "^2.1.0",
     "gulp-minify-css": "^1.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^1.3.3",
     "gulp-util": "^3.0.4"
   }
 }
